# FaultNote

./: .gitignore  Cargo.toml  LICENSE  README.md  test.rs
src/: app.rs  events.rs  lib.rs  main.rs  ui.rs
src/notion/: client.rs
tests/: app_tests.rs  events_tests.rs  notion_tests.rs
