[package]
name = "faultnote"
version = "0.1.0"
description = "error logger application "
authors = ["its-YogeshChandra <pandittheroyal@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.29.0"
ratatui = "0.30.0-beta"
reqwest = "0.13.1"
serde = "1.0.228"
serde_json = "1.0.149"
tokio = "1.49.0"

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
